--- a/src/TestTemplate12.Api/appsettings.json
+++ b/src/TestTemplate12.Api/appsettings.json
@@ -9,6 +9,9 @@
         "Args": {
           "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
         }
+      },
+      {
+        "Name": "Console"
       }
     ],
     "Enrich": [ "FromLogContext" ],
