Upgrade ADO build pipeline to .NET 9.

--- a/deployment/pipelines/build_pipeline.yml
+++ b/deployment/pipelines/build_pipeline.yml
@@ -32,6 +32,11 @@ stages:
         - script: ls -al
           displayName: 'Basic Information - Directory Contents'
 
+        - task: UseDotNet@2
+          inputs:
+            packageType: 'sdk'
+            version: '9.x'
+
         - task: gitversion/setup@0
           displayName: Install GitVersion
           inputs:
