Upgrade ADO release pipeline to .NET 9 [+semver: minor]

--- a/deployment/pipelines/release_pipeline.yml
+++ b/deployment/pipelines/release_pipeline.yml
@@ -43,6 +43,11 @@ jobs:
               [string] $buildName = "$($newVersion)"
               Write-Host "##vso[build.updatebuildnumber]$buildName"
 
+        - task: UseDotNet@2
+          inputs:
+            packageType: 'sdk'
+            version: '9.x'
+
         - download: none
 
         - task: DownloadPipelineArtifact@2
